[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.27.4"
datasets = "^2.11.0"
tiktoken = "^0.4.0"
wandb = "^0.15.0"
tqdm = "^4.65.0"
numpy = "^1.24.2"
torch = "^2.0.0"
#torch = { version="^2.0.0", source="pytorch-cpu"}
scikit-learn = "^1.2.2"
plotly = "^5.14.1"
caffeinate = "^0.1.0"
segeval = "^2.0.11"
seqeval = "^1.2.2"
dataset = "^1.6.0"
spacy = "^3.5.3"
pandas = "^2.0.0"
notebook = "^7.0.0"
label-studio-sdk = "^0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
